Build offline installers in CircleCI
add qtifw binarycreator to path explicitly

Update continue_config.yml

artifact upload from subdir

upload path

linux installer

mac

--- a/gpt4all-chat/CMakeLists.txt
+++ b/gpt4all-chat/CMakeLists.txt
@@ -273,6 +273,7 @@ cpack_ifw_configure_component(${COMPONENT_NAME_MAIN} REPLACES "gpt4all-chat") #W
 if (GPT4ALL_LOCALHOST)
     cpack_ifw_add_repository("GPT4AllRepository" URL "http://localhost/repository")
 elseif(GPT4ALL_OFFLINE_INSTALLER)
+  add_compile_definitions(GPT4ALL_OFFLINE_INSTALLER)
   # noop
 else()
   if(${CMAKE_SYSTEM_NAME} MATCHES Linux)
